--- a/students/havrylova_kateryna/02_html/page1.html
+++ b/students/havrylova_kateryna/02_html/page1.html
@@ -9,78 +9,63 @@
 
 <body>
     <header>
-        <h1 id="up"><a href="./index.html"><b>My profile</b></a></h1>
-
+        <h1 id="up">My profile</h1>
         <div>
-
-            <ul>
-                <li><a href="./page1.html">My education</a></li>
-                <li><a href="./page2.html">Career</a></li>
-                <li><a href="./page3.html">Hobbies</a></li>
-            </ul>
-
+            <nav>
+                <ul>
+                    <li><a href="./page1.html">My education</a></li>
+                    <li><a href="./page2.html">Career</a></li>
+                    <li><a href="./page3.html">Hobbies</a></li>
+                </ul>
+            </nav>
         </div>
-
     </header>
 
+    <main>
+        <section>
+            <h2>Classical education at universities</h2>
+            <p>Years: 1999-2004</p>
+            <p>
+                Univercity: Ukrainian Academy of Banking
+            </p>
+            <p>
+                Specialization: Master ́s degree in Finance
+            </p>
+            <p>
+                <a href="./images/diplom1.jpg" target="_blank">Diplom with honors</a>
+            </p>
+            <hr>
+            <p>Years: 2018-2020</p>
+            <p>Univercity: Sumy State University</p>
+            <p>Specialization: Public management and administration</p>
+            <p><a href="./images/diplom1.jpg" target="_blank">Master ́s degree </a></p>
 
-    <table>
-        <caption><b>Classical education at universities</b></caption>
-        <thead>
-            <tr>
-                <th>Years</th>
-                <th>Univercity</th>
-                <th>Specialization</th>
-                <th>Diplom</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1999-2004</td>
-                <td>Ukrainian Academy of Banking</td>
-                <td>Master ́s degree in Finance</td>
-                <td><a href="./images/diplom1.jpg" target="_blank">Diplom with honors</a></td>
-            </tr>
-            <tr>
-                <td>2018-2020</td>
-                <td>Sumy State University</td>
-                <td>Public management and administration</td>
-                <td><a href="./images/diplom1.jpg" target="_blank">Master ́s degree </a></td>
-            </tr>
-        </tbody>
-    </table>
-    <hr>
-    <table>
-        <caption><b>Up-skilling</b></caption>
-        <thead>
-            <tr>
-                <th>Years</th>
-                <th>Organization</th>
-                <th>Specialization</th>
-                <th>Certificate</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2022</td>
-                <td><img src="./images/softserve_logo.png" alt=""></td>
-                <td>Intro to Programming</td>
-                <td><a href="./images/Certificate_SoftServe.pdf" target="_blank">CERTIFICATE</a></td>
-            </tr>
-            <tr>
-                <td>2023</td>
-                <td><img src="./images/prog_academy.png" alt=""></td>
-                <td>Java Developer</td>
-                <td><a href="./images/Kateryna Havrylova.png" target="_blank">CERTIFICATE OF GRADUATION</a></td>
-            </tr>
-            <tr>
-                <td>now</td>
-                <td><img src="./images/beetroot_logo.png" alt=""></td>
-                <td>Front-End Development</td>
-                <td>in processing</td>
-            </tr>
-        </tbody>
-    </table>
+        </section>
+        <hr>
+        <section>
+            <h2>Up-skilling</h2>
+            <p>Years: 2022</p>
+            <p>Organization: <img src="./images/softserve_logo.png" alt=""></p>
+            <p>Course: Intro to Programming</p>
+            <p>Certificate: <a href="./images/Certificate_SoftServe.pdf" target="_blank">CERTIFICATE</a></p>
+
+            <hr>
+            <p>Years: 2023</p>
+            <p>Organization: <img src="./images/prog_academy.png" alt=""></p>
+            <p>Course: Java Developer</p>
+            <p>Certificate: <a href="./images/Kateryna Havrylova.png" target="_blank">CERTIFICATE OF GRADUATION</a></p>
+
+            <hr>
+            <p>Years: now</p>
+            <p>Organization: <img src="./images/beetroot_logo.png" alt=""></p>
+            <p>Course: Front-End Development</p>
+            <p>Certificate: in processing</p>
+
+        </section>
+    </main>
+    <footer>
+        <a href="#up" travel="_blank">Up</a>
+    </footer>
 
 </body>
 
