changes were made to the img

--- a/students/dunaieva_alona/07_figma/index.html
+++ b/students/dunaieva_alona/07_figma/index.html
@@ -43,22 +43,46 @@
                 <img src="./img/ps.svg" alt="ps">
                 <figcaption>Adobe Photoshop</figcaption>
             </figure>
-            <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star_white.svg" alt="star-white">
+            <div>
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star_white.svg" alt="star-white">
+            </div>
             <figure>
                 <img src="./img/ai.svg" alt="ai">
                 <figcaption>Adobe Illustrator</figcaption>
             </figure>
-            <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"><img src="./img/star_white.svg" alt="star-white"><img src="./img/star_white.svg" alt="star-white">
+            <div>
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star_white.svg" alt="star-white">
+                <img src="./img/star_white.svg" alt="star-white">
+            </div>
             <figure>
                 <img src="./img/ae.svg" alt="ae">
                 <figcaption>Adobe After Effects</figcaption>
             </figure>
-            <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"><img src="./img/star_white.svg" alt="star-white">
+            <div>
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star_white.svg" alt="star-white">
+            </div>
             <figure>
                 <img src="./img/figma.svg" alt="ae">
                 <figcaption>Figma</figcaption>
             </figure>
-            <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"> <img src="./img/star.svg" alt="star"><img src="./img/star_white.svg" alt="star-white">
+            <div>
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star.svg" alt="star">
+                <img src="./img/star_white.svg" alt="star-white">
+            </div>
         </section>
         <section class="portfolio">
             <h2>Portfolio</h2>
