--- a/students/tiselko_iryna/07_figma/index.html
+++ b/students/tiselko_iryna/07_figma/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../08_css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Denis Novik</title>
 </head>
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="nav">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About me</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -36,8 +38,8 @@
         <section id="skills">
             <h2>Skills</h2>
             <p>I work in such programs as</p>
-            <div>
-                <div>
+            <div class="skills">
+                <div class="ps">
                     <figure>
                         <img src="./images/skills/ps.svg" alt="Photoshop">
                         <figcaption>Adobe<br>Photoshop</figcaption>
@@ -49,7 +51,7 @@
                     <span><img src="./images/skills/star_empt.svg" alt=""></span>
                 </div>
 
-                <div>
+                <div class="ai">
                     <figure>
                         <img src="./images/skills/ai.svg" alt="Adobe Illustrator">
                         <figcaption>Adobe<br>Illustrator</figcaption>
@@ -61,19 +63,19 @@
                     <span><img src="./images/skills/star_empt.svg" alt=""></span>
                 </div>
 
-                <div>
+                <div class="aae">
                     <figure>
                         <img src="./images/skills/aae.svg" alt="Adobe After Effects">
                         <figcaption>Adobe<br>After Effects</figcaption>
                     </figure>
-                    <span><img src="./images/skills/Star.svg" alt=""></span>
-                    <span><img src="./images/skills/Star.svg" alt=""></span>
-                    <span><img src="./images/skills/Star.svg" alt=""></span>
-                    <span><img src="./images/skills/Star.svg" alt=""></span>
-                    <span><img src="./images/skills/Star_empt.svg" alt=""></span>
+                    <span><img src="./images/skills/star.svg" alt=""></span>
+                    <span><img src="./images/skills/star.svg" alt=""></span>
+                    <span><img src="./images/skills/star.svg" alt=""></span>
+                    <span><img src="./images/skills/star.svg" alt=""></span>
+                    <span><img src="./images/skills/star_empt.svg" alt=""></span>
                 </div>
 
-                <div>
+                <div class="figma">
                     <figure>
                         <img src="./images/skills/figma.svg" alt="Figma">
                         <figcaption>Figma</figcaption>
@@ -101,8 +103,7 @@
 
             <figure>
                 <a href="#" target="_blank"><img src="./images/portfolio/3rd_prjt.jpg" alt="Braun Landing Page"></a>
-                <figcaption class="portfolio_text">Reebok Store - Concept</figcaption>
-                <figcaption >Braun Landing Page - Concept</figcaption>
+                <figcaption class="portfolio_text">Braun Landing Page - Concept</figcaption>
             </figure>
         </section>
     </main>
@@ -112,12 +113,12 @@
         <p>Want to know more or just chat?<br>You are welcome!</p>
         <button>Send message</button>
         <div>
-            <a href="https://www.linkedin.com/" target="_blank"><img src="./images/contacts/Group 2.svg" alt="linkedin"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="./images/contacts/surface1 6.svg" alt="instagram"></a>
+            <a href="https://www.linkedin.com/" target="_blank"><img src="./images/contacts/linkedin.svg" alt="linkedin"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./images/contacts/instagram.svg" alt="instagram"></a>
             <a href="https://www.behance.net/" target="_blank"><img src="./images/contacts/behance.svg" alt="behance"></a>
-            <a href="https://dribbble.com/" target="_blank"><img src="./images/contacts/surface1 7.svg" alt="dribble"></a>
+            <a href="https://dribbble.com/" target="_blank"><img src="./images/contacts/dribble.svg" alt="dribble"></a>
         </div>
-        <p>Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
+        <p class="footer_appeal">Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
     </footer>
 </body>
 </html>
