fixed links in nav menu

--- a/students/linov_mykhailo/02_html/work-experience/work.html
+++ b/students/linov_mykhailo/02_html/work-experience/work.html
@@ -10,12 +10,12 @@
 <body>
     <header>
         <nav>
-            <a href="work-experience/work.html">Work Experience</a>
-            <a href="education/education.html">Education</a>
-            <a href="skills/skills.html">Skills</a>
+            <a href="work.html">Work Experience</a>
+            <a href="../education/education.html">Education</a>
+            <a href="../skills/skills.html">Skills</a>
             <a href="https://www.linkedin.com/in/mlinov/" target="_blank">LinkedIn</a>
             <a href="https://www.facebook.com/michael.linov" target="_blank">Facebook</a>
-            <a href="about-me/about.html">About me</a>
+            <a href="../about-me/about.html">About me</a>
         </nav>
     </header>
     <h1><i>Work Experience</i></h1>
