changed name images folder and added the latest fixes

--- a/students/dunaieva_alona/07_figma/index.html
+++ b/students/dunaieva_alona/07_figma/index.html
@@ -12,15 +12,20 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">Home</a></li>
+                    <a href="index.html">Home</a>
+                </li>
                 <li>
-                    <a href="#">About me</a></li>
+                    <a href="#about-me">About me</a>
+                </li>
                 <li>
-                    <a href="#">Skills</a></li>
+                    <a href="#skills">Skills</a>
+                </li>
                 <li>
-                    <a href="#">Portfolio</a></li>
+                    <a href="#portfolio">Portfolio</a>
+                </li>
                 <li>
-                    <a href="#">Contacts</a></li>
+                    <a href="#contacts">Contacts</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -28,93 +33,99 @@
     <main>
         <section class="hero_block">
             <h1>Denis Novik</h1>
-            <img src="./img/man.jpg" alt="man">
+            <img src="./images/man.jpg" alt="man">
         </section>
-        <section class="about_me">
+        <section id="about-me" class="about_me">
             <h2>About me</h2>
             <p>Hi, I'm Denis – UX/UI designer from Minsk. I'm interested in design and everything connected with it.</p>
             <p>I'm studying at courses "Web and mobile design interfaces" in IT-Academy.</p>
             <p>Ready to implement excellent projects with wonderful people.</p>
         </section>
-        <section class="skills">
+        <section id="skills" class="skills">
             <h2>Skills</h2>
             <p>I work in such programs as</p>
             <figure>
-                <img src="./img/ps.svg" alt="ps">
+                <img src="./images/ps.svg" alt="ps">
                 <figcaption>Adobe Photoshop</figcaption>
             </figure>
             <div>
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star_white.svg" alt="star-white">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star_white.svg" alt="star-white">
             </div>
             <figure>
-                <img src="./img/ai.svg" alt="ai">
+                <img src="./images/ai.svg" alt="ai">
                 <figcaption>Adobe Illustrator</figcaption>
             </figure>
             <div>
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star_white.svg" alt="star-white">
-                <img src="./img/star_white.svg" alt="star-white">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star_white.svgimages" alt="star-white">
+                <img src="./images/star_white.svg" alt="star-white">
             </div>
             <figure>
-                <img src="./img/ae.svg" alt="ae">
+                <img src="./images/ae.svg" alt="ae">
                 <figcaption>Adobe After Effects</figcaption>
             </figure>
             <div>
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star_white.svg" alt="star-white">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star_white.svg" alt="star-white">
             </div>
             <figure>
-                <img src="./img/figma.svg" alt="ae">
+                <img src="./images/figma.svg" alt="ae">
                 <figcaption>Figma</figcaption>
             </figure>
             <div>
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star.svg" alt="star">
-                <img src="./img/star_white.svg" alt="star-white">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star.svg" alt="star">
+                <img src="./images/star_white.svg" alt="star-white">
             </div>
         </section>
-        <section class="portfolio">
+        <section id="portfolio" class="portfolio">
             <h2>Portfolio</h2>
-            <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-                <img src="./img/woman-min.png" alt="portfolio-sale">
-            </a><br>
-            <a href="#">Online fashion store - Homepage</a><br>
-            <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-                <img src="./img/reebok_web-min.png" alt="portfolio_reebok">
-            </a><br>
-            <a href="#">Reebok Store - Concept</a><br>
-            <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-                <img src="./img/reebok_web-mint52.png" alt="portfolio_reebok_t52">
-            </a><br>
-            <a href="#">Braun Landing Page - Concept</a>
+            <div>
+                <a href="https://www.google.com.ua/?hl=ru" target="_blank">
+                    <img src="./images/woman-min.png" alt="portfolio-sale">
+                </a><br>
+                <a href="#">Online fashion store - Homepage</a><br>
+            </div>
+            <div>
+                <a href="https://www.google.com.ua/?hl=ru" target="_blank">
+                    <img src="./images/reebok_web-min.png" alt="portfolio_reebok">
+                </a><br>
+                <a href="#">Reebok Store - Concept</a><br>
+            </div>
+            <div>
+                <a href="https://www.google.com.ua/?hl=ru" target="_blank">
+                    <img src="./images/reebok_web-mint52.png" alt="portfolio_reebok_t52">
+                </a><br>
+                <a href="#">Braun Landing Page - Concept</a>
+            </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer id="contacts" class="footer">
         <h2>Contacts</h2>
         <p>Want to know more or just chat? You are welcome!</p>
         <a href="#" class="button">Send message</a><br>
         <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-            <img src="./img/in.svg" alt="in">
+            <img src="./images/in.svg" alt="in">
         </a>
         <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-            <img src="./img/instagram.svg" alt="instagram">
+            <img src="./images/instagram.svg" alt="instagram">
         </a>
         <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-            <img src="./img/behance.svg" alt="behance">
+            <img src="./images/behance.svg" alt="behance">
         </a>
         <a href="https://www.google.com.ua/?hl=ru" target="_blank">
-            <img src="./img/surface.svg" alt="surface">
+            <img src="./images/surface.svg" alt="surface">
         </a><br>
         <p>Like me on LinkedIn, Instagram, Behance, Dribble</p>
     </footer>
