fixed path to star white image

--- a/students/dunaieva_alona/07_figma/index.html
+++ b/students/dunaieva_alona/07_figma/index.html
@@ -63,7 +63,7 @@
                 <img src="./images/star.svg" alt="star">
                 <img src="./images/star.svg" alt="star">
                 <img src="./images/star.svg" alt="star">
-                <img src="./images/star_white.svgimages" alt="star-white">
+                <img src="./images/star_white.svg" alt="star-white">
                 <img src="./images/star_white.svg" alt="star-white">
             </div>
             <figure>
