--- a/students/motkaliuk_andrii/08_css_welcome/index.html
+++ b/students/motkaliuk_andrii/08_css_welcome/index.html
@@ -6,18 +6,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denis Novik</title>
+    <style>
+        p {
+            color: var(--black, #070707);
+            text-align: center;
+            font-size: 18px;
+            font-family: Open Sans, Arial, Helvetica, sans-serif;
+            font-weight: 400;
+        }
+
+        h1 {
+            color: var(--black, #070707);
+            font-size: 47.339px;
+            font-family: Open Sans, Arial, Helvetica, sans-serif;
+            font-weight: 700;
+        }
+
+        h2 {
+            color: var(--black, #070707);
+            text-align: center;
+            font-size: 34px;
+            font-family: Open Sans, Arial, Helvetica, sans-serif;
+            font-weight: 700;
+        }
+
+        nav {
+            color: #828282;
+            font-size: 18px;
+            font-family: Open Sans, Arial, Helvetica, sans-serif;
+            font-weight: 400;
+        }
+
+        .skills_signature {
+            color: #828282;
+            text-align: center;
+            font-size: 14px;
+            font-family: Gilroy-Bold, Arial, Helvetica, sans-serif;
+            font-weight: 400;
+        }
+
+        .button {
+            color: #FFF;
+            text-align: center;
+            font-size: 18px;
+            font-family: Open Sans, Arial, Helvetica, sans-serif;
+            font-weight: 700;
+            letter-spacing: 1.8px;
+        }
+
+    </style>
 </head>
 
 <body>
-    <header>
+    <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About me</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contacts">Contacts</a></li>
+            <li style="display: inline-block; margin-right: 40px;"><a href="#">Home</a></li>
+            <li style="display: inline-block; margin-right: 40px"><a href="#about">About me</a></li>
+            <li style="display: inline-block; margin-right: 40px"><a href="#skills">Skills</a></li>
+            <li style="display: inline-block; margin-right: 40px"><a href="#portfolio">Portfolio</a></li>
+            <li style="display: inline-block"><a href="#contacts">Contacts</a></li>
         </ul>
-    </header>
+    </nav>
 
     <hr>
 
@@ -26,39 +75,46 @@
         <img src="./ras_images/hero.jpg" width="944" height="387" alt="Denis Novik">
     </section>
 
-    <section>
+    <main>
         <h2 id="about">About me</h2>
         <p>
             Hi, I'm Denis – UX/UI designer from Minsk.<br>
             I'm interested in design and everything connected with it.
         </p>
+        <br>
         <p>
             I'm studying at courses "Web and mobile design<br>
             interfaces" in IT-Academy.
         </p>
+        <br>
         <p>
             Ready to implement excellent projects<br>
             with wonderful people.
         </p>
-    </section>
+    </main>
 
     <section>
         <h2 id="skills">Skills</h2>
         <p>I work in such programs as</p>
         <div>
             <img src="./vec_images/ps.svg" width="89" height="88" alt="Adobe Photoshop">
-            <p>Adobe<br>Photoshop</p>
+            <p class="skills_signature">Adobe<br>Photoshop</p>
             <div>
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star"
+                    style="display: inline-block; margin-right: 9px">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star"
+                    style="display: inline-block; margin-right: 9px">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star"
+                    style="display: inline-block; margin-right: 9px">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star"
+                    style="display: inline-block; margin-right: 9px">
+                <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star"
+                    style="display: inline-block">
             </div>
         </div>
         <div>
             <img src="./vec_images/ai.svg" width="89" height="88" alt="Adobe Illustrator">
-            <p>Adobe<br>Illustrator</p>
+            <p class="skills_signature">Adobe<br>Illustrator</p>
             <div>
                 <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
                 <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
@@ -69,7 +125,7 @@
         </div>
         <div>
             <img src="./vec_images/ae.svg" width="89" height="88" alt="Adobe After Effects">
-            <p>Adobe<br>After Effects</p>
+            <p class="skills_signature">Adobe<br>After Effects</p>
             <div>
                 <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
                 <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
@@ -80,7 +136,7 @@
         </div>
         <div>
             <img src="./vec_images/figma.svg" width="58" height="88" alt="Figma">
-            <p>Figma</p>
+            <p class="skills_signature">Figma</p>
             <div>
                 <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
                 <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
@@ -118,7 +174,7 @@
     <section>
         <h2 id="contacts">Contacts</h2>
         <p>Want to know more or just chat?<br>You are welcome!</p>
-        <button name="button">Send message</button>
+        <button name="button" class="button">Send message</button>
         <div>
             <ul>
                 <li>
@@ -138,7 +194,9 @@
     </section>
 
     <footer>
-        <p>Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
+        <p
+            style="color: #828282; text-align: center; font-size: 14px; font-family: Open Sans, Arial, Helvetica, sans-serif; font-weight: 400;">
+            Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
     </footer>
 </body>
 
