--- a/students/havrylova_kateryna/07_figma/index.html
+++ b/students/havrylova_kateryna/07_figma/index.html
@@ -118,9 +118,9 @@
             <button>Send message</button>
             <ul>
                 <li><img src="./images/in.svg" alt=""></li>
-                <li><img src="./images/surface1 6.svg" alt=""></li>
+                <li><img src="./images/surface6.svg" alt=""></li>
                 <li><img src="./images/behance.svg" alt=""></li>
-                <li><img src="./images/surface1 7.svg" alt=""></li>
+                <li><img src="./images/surface7.svg" alt=""></li>
             </ul>
             <p>Like me on LinkedIn, Instagram, Behance, Dribble</p>
         </div>
