--- a/students/havrylova_kateryna/02_html/page1.html
+++ b/students/havrylova_kateryna/02_html/page1.html
@@ -47,13 +47,13 @@
             <p>Years: 2022</p>
             <p>Organization: <img src="./images/softserve_logo.png" alt=""></p>
             <p>Course: Intro to Programming</p>
-            <p>Certificate: <a href="./images/Certificate_SoftServe.pdf" target="_blank">CERTIFICATE</a></p>
+            <p>Certificate: <a href="./images/certificate_softserve.pdf" target="_blank">CERTIFICATE</a></p>
 
             <hr>
             <p>Years: 2023</p>
             <p>Organization: <img src="./images/prog_academy.png" alt=""></p>
             <p>Course: Java Developer</p>
-            <p>Certificate: <a href="./images/Kateryna Havrylova.png" target="_blank">CERTIFICATE OF GRADUATION</a></p>
+            <p>Certificate: <a href="./images/kateryna_havrylova.png" target="_blank">CERTIFICATE OF GRADUATION</a></p>
 
             <hr>
             <p>Years: now</p>
