--- a/students/havrylova_kateryna/02_html/page3.html
+++ b/students/havrylova_kateryna/02_html/page3.html
@@ -31,8 +31,8 @@
             And before the war, we used to go to the seaside once a year,
             because the sea is love and complete relaxation.
         </p>
-        <img src="./images/hobbies/BD.jpg" alt="">
-        <img src="./images/hobbies/Danylo_river.jpg" alt="">
+        <img src="./images/hobbies/bd.jpg" alt="">
+        <img src="./images/hobbies/danylo_river.jpg" alt="">
         <img src="./images/hobbies/mount.jpg" alt="">
         <img src="./images/hobbies/sky.jpg" alt="">
         <img src="./images/hobbies/cave.jpg" alt="">
