--- a/students/hridina_anastasiia/08_css/index.html
+++ b/students/hridina_anastasiia/08_css/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denis Novik</title>
     <style>
+        body {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: normal;
+        }
+
         header {
             background-color: #fff;
             text-align: center;
             position: relative;
-            bottom: -10px;
             border-bottom: 1px solid;
             border-color: #828282;
             margin-bottom: 15px;
@@ -42,10 +48,8 @@
 <body>
     <header>
         <nav>
-            <ul
-                style="font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 18px; font-style: normal; font-weight: 400; line-height: normal;">
-                <li style="display: inline;"><a style="color: black;" href="index.html#">Home</a>
-                </li>
+            <ul>
+                <li style="display: inline;"><a style="color: black;" href="index.html#">Home</a></li>
                 <li style="display: inline;"><a style="color: #828282;" href="#about me">About me</a></li>
                 <li style="display: inline;"><a style="color: #828282;" href="#skills">Skills</a></li>
                 <li style="display: inline;"><a style="color: #828282;" href="#portfolio">Portfolio</a></li>
@@ -57,15 +61,13 @@
     <main>
         <section>
             <div class="container1">
-                <h1 style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
-                    font-size: 47px; font-style: normal; font-weight: 700; line-height: normal;">
+                <h1>
                     Denis Novik</h1>
                 <img src="./images/denis_novik_photo.jpg" width="943" height="387" alt="Denis Novik">
             </div>
         </section>
         <section style="text-align: center;">
-            <div id="about me"
-                style="background-color: #F6F6F6; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+            <div id="about me">
                 <h2>About me</h2>
                 <p style="text-align: center;">Hi, I'm Denis – UX/UI designer from Minsk.
                     I'm interested in design and everything connected with it.</p>
@@ -78,8 +80,7 @@
             </div>
         </section>
         <section>
-            <div id="skills"
-                style="text-align: center; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+            <div id="skills">
                 <h2>Skills</h2>
                 <h3
                     style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: 400; line-height: normal; font-size: 18px;">
@@ -124,9 +125,7 @@
         </section>
         <section style="background-color: #F6F6F6;">
             <div id="portfolio" class="container2">
-                <h2
-                    style="text-align: center; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
-                    Portfolio</h2>
+                <h2>Portfolio</h2>
                 <img src="./images/fashion_store.jpg" width="936" height="510" alt="Online fashion store">
                 <a href="#">Online fashion store - Homepage</a>
             </div>
@@ -140,8 +139,7 @@
             </div>
         </section>
         <footer style="text-align: center;">
-            <div id="contacts"
-                style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+            <div id="contacts">
                 <h2>Contacts</h2>
                 <p>Want to know more or just chat?
                     You are welcome!</p>
@@ -154,8 +152,7 @@
                 <a href="#"><img src="./images/dribble.svg" alt="Dribble"></a>
             </div>
             <div>
-                <p
-                    style="color: #828282; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+                <p>
                     Like me on
                     LinkedIn, Instagram, Behance,
                     Dribble
